Improved markdown format for galleries
We now support captions on every image in a gallery.

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,2 +1,4 @@
 1.0.0:
-    First version
+    - First version
+1.1.0:
+    - Improved markdown markup, now you can set captions on every image in a gallery
